--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
   <title>Model Viewer</title>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
+    model-viewer{
+      width: 400px;
+      height: 600px;
+      margin: 0 auto;
+    }
   </style>
 </head>
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages. lololol</p>
+  <model-viewer src="assets/3Dtest.glb"></model-viewer>
 </body>
 </html>
