--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages. lololol</p>
-  <model-viewer src="assets/CHAHIN_BOTTLE_OF_SODA.gltf"></model-viewer>
+  <model-viewer src="assets/CHAHIN_BOTTLE_OF_SODA.gltf" auto-rotate camera-controls></model-viewer>
 </body>
 </html>
