--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages. lololol</p>
-  <model-viewer src="assets/CHAHIN_BOTTLE_OF_SODA.gltf" auto-rotate camera-controls></model-viewer>
+<p>AR test page</p>
+  <model-viewer src="assets/CHAHIN_BOTTLE_OF_SODA.gltf" ar ar-modes="webxr scene-viewer quick-look" ar-scale="auto" camera-controls></model-viewer>
 </body>
 </html>
