--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   </style>
 </head>
 <body>
-<h1>Hello World</h1>
 <p>AR test page</p>
-  <model-viewer src="assets/CHAHIN_BOTTLE_OF_SODA.gltf" ar ar-modes="webxr scene-viewer quick-look" ar-scale="auto" camera-controls></model-viewer>
+  <model-viewer src="assets/3Dtest.glb" ar ar-modes="webxr scene-viewer quick-look" ar-scale="auto" camera-controls></model-viewer>
 </body>
 </html>
