--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Model Viewer</title>
+  <title>AR Model Suite</title>
   <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.1.1/model-viewer.min.js"></script>
   <style>
     model-viewer{
@@ -14,7 +14,7 @@
   </style>
 </head>
 <body>
-<p>AR test page</p>
+<p>Starter webpage for AR models</p>
   <model-viewer src="assets/3Dtest.glb" ar ar-modes="webxr scene-viewer quick-look" ar-scale="auto" camera-controls></model-viewer>
 </body>
 </html>
