--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
   <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.1.1/model-viewer.min.js"></script>
   <style>
     model-viewer{
-      width: 400px;
-      height: 600px;
+      width: 200px;
+      height: 200px;
       margin: 0 auto;
     }
   </style>
 </head>
 <body>
-<p>Starter webpage for AR models</p>
+  <header>Starter webpage for AR models</header>
+  <p>Static Model</p>
+  <model-viewer src="assets/3Dtest.glb" ar ar-modes="webxr scene-viewer quick-look" ar-scale="auto" camera-controls></model-viewer>
+  <p>Dynamic Model</p>
   <model-viewer src="assets/3Dtest.glb" ar ar-modes="webxr scene-viewer quick-look" ar-scale="auto" camera-controls></model-viewer>
 </body>
 </html>
