--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>AR Model Suite</title>
   <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.1.1/model-viewer.min.js"></script>
   <style>
+    h1 {text-align: center;}
+    p {text-align: center;}
+    div {text-align: center;}
     model-viewer{
       width: 200px;
       height: 200px;
@@ -14,7 +17,7 @@
   </style>
 </head>
 <body>
-  <header>Starter webpage for AR models</header>
+  <h1><b>Starter webpage for AR models</b></h1>
   <p>Static Model</p>
   <model-viewer src="assets/3Dtest.glb" ar ar-modes="webxr scene-viewer quick-look" ar-scale="auto" camera-controls></model-viewer>
   <p>Dynamic Model</p>
