Upload AR models

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <body>
   <h1><b>Starter webpage for AR models</b></h1>
   <p>Static Model</p>
-  <model-viewer src="assets/3Dtest.glb" ar ar-modes="webxr scene-viewer quick-look" ar-scale="auto" camera-controls></model-viewer>
+  <model-viewer src="assets/Valve_Static.glb" ios-src="assets/Valve_USDZ_Static.usdz" ar ar-modes="webxr scene-viewer quick-look" ar-scale="auto" camera-controls></model-viewer>
   <p>Dynamic Model</p>
-  <model-viewer src="assets/3Dtest.glb" ar ar-modes="webxr scene-viewer quick-look" ar-scale="auto" camera-controls></model-viewer>
+  <model-viewer src="assets/Valve_Dynamic.glb" ios-src="assets/Valve_USDZ_Dynamic.usdz" ar ar-modes="webxr scene-viewer quick-look" ar-scale="auto" camera-controls></model-viewer>
 </body>
 </html>
