--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
   <p>Static Model</p>
   <model-viewer src="assets/android/Valve_Static.glb" ios-src="assets/ios/Valve_USDZ_Static.usdz" ar ar-modes="webxr scene-viewer quick-look" ar-scale="auto" camera-controls></model-viewer>
   <p>Dynamic Model</p>
-  <model-viewer src="assets/android/Valve_Dynamic.glb" ios-src="assets/ios/Valve_USDZ_Dynamic.usdz" ar ar-modes="webxr scene-viewer quick-look" ar-scale="auto" camera-controls></model-viewer>
+  <model-viewer src="assets/android/Valve_Dynamic.glb" ios-src="assets/ios/Valve_USDZ_Dynamic.usdz" autoplay ar ar-modes="webxr scene-viewer quick-look" ar-scale="auto" camera-controls></model-viewer>
 </body>
 </html>
